@@ -1,5 +1,6 @@
 0.7.0 (25-Feb-2013):
 
+* Add zero-copy conversion functions to/from the Core `Bigsubstring`.
 * Add an `of_string` function to simplify the construction from OCaml values.
 * Add Async interface to interoperate with Jane Street Core code.
 
